--- a/CV_Abraham_Bazo.html
+++ b/CV_Abraham_Bazo.html
@@ -62,11 +62,11 @@ div {
 
 <div class="row">
     <div class="column left" style="background-color:rgb(192, 94, 94);">
-      <h2>Columna 1</h2>
+      <h2>CAMBIO PARA GITHUB</h2>
       <p>SKILLS</p>
     </div>
     <div class="column right" style="background-color:rgb(44, 204, 191);">
-      <h2>Columna 2</h2>
+      <h2>CAMBIO PARA GITHUT</h2>
       <p>TODO LO DEMÁS</p>
     </div>
   </div>
