--- a/CV_Abraham_Bazo.html
+++ b/CV_Abraham_Bazo.html
@@ -66,7 +66,7 @@ div {
       <p>SKILLS</p>
     </div>
     <div class="column right" style="background-color:rgb(44, 204, 191);">
-      <h2>CAMBIO PARA GITHUT</h2>
+      <h2>CAMBIO PARA GITHUB</h2>
       <p>TODO LO DEMÁS</p>
     </div>
   </div>
