--- a/CV_Abraham_Bazo.html
+++ b/CV_Abraham_Bazo.html
@@ -26,12 +26,14 @@
         
             <article>
                 <h3>Skills</h3>
+                <article class=skills>
                     <h4>Luxury Real Estate Marketing</h4>
                     <h4>Social Media Markeitng</h4>
                     <h4>Event Planning</h4>
                     <h4>Branding</h4>
                     <h4>Media Planning</h4>
                     <h4>Agile</h4>
+                </article>
             </article>  
         
         </div>    
@@ -49,11 +51,11 @@
         <article>
             <h3>Work Experience</h3>
                 <h4>Lider Grupo Constructor</h4>
-                <p>Marketing Supervisor</p>
+                <p>Marketing Supervisor (Luxury Real Estate)</p>
                 <h4>Menorca Inversiones
-                <p>Brand Manager</p>
+                <p>Brand Manager (Luxury Real Estate)</p>
                 <h4>Crosland</h4>
-                <p>Brand Manager</p>
+                <p>Brand Manager (Automotive)</p>
         </article>
         <br>
         <article>
