--- a/abportfolio.html
+++ b/abportfolio.html
@@ -10,42 +10,84 @@
 </head>
 
 <body>
-<h1>MARKETING PORTFOLIO <h1>
-<h2>Abraham Bazo</h2>   
+<h1>MARKETING PORTFOLIO<h1>
+<h2>Abraham Bazo · Work Samples 2016-2020</h2>   
 
 <br>
 
 <h3>LIDER GRUPO CONSTRUCTOR // INFINITUM</h3>
 
-<p>Image Rendering</p>
+<p>Image Rendering / Brand Identity / Sales Materials / etc</p>
 
 <div class="row">
     <div class="column">
         <img class="img1" src="infinitumfachada.jpg">
         <img class="img2" src="infinitumlobby.jpg">
-        <img class="img3" src="infinitumlounge.jpg">
+
     </div>
 
     <div class="column">
         <img class="img4" src="infinitumpiscina.jpg">
         <img class="img5" src="infinitumpiso12.png">
         <img class="img5" src="infinitumsalaflat.png">
-        <img class="img5" src="infinitumbano.png">
+        
     </div>
+
+    <div class="column">
+        
+        <img class="img5" src="infinitumbano.png">
+        <img class="img3" src="infinitumlounge.jpg">
+        <img class="img7" src="infinitummalecon.jpg">
+    </div>
+
 </div>
 
 
-
+<br>
 <h3>LIDER GRUPO CONSTRUCTOR // NAMUA</h3>
 
-<img class="img4" src="namua1.tif">
+<p>Photoshoots / Brand Identity / Events / etc</p>
 
+<div class="row">
+    <div class="column">
+        <img class="img4" src="namua1.png">
+        <img class="img4" src="namua3.png">
+    </div>
 
-<p>Brand</p>
+    <div class="column">
+        <img class="img5" src="namua2.png">
+        <img class="img4" src="namua4.png">
+        <img class="img4" src="namua6.jpg">
 
+    </div>
 
+    <div class="column">
+        <img class="img5" src="namua5.png">
+    </div>
+</div>
 
+<br>
 <h3>MENORCA INVERSIONES // LA QUEBRADA</h3>
+
+<p>Photoshoots / Brand Identity / Events / etc</p>
+
+<div class="row">
+    <div class="column">
+        <img class="img4" src="laquebrada1.jpg">
+    </div>
+
+    <div class="column">
+        <img class="img4" src="laquebrada3.png">
+        <img class="img4" src="evento2.png">
+    </div>
+
+    <div class="column">
+        <img class="img4" src="laquebrada2.png">
+        <img class="img4" src="laquebrada4.png">
+        <img class="img4" src="evento1.png">
+    </div>
+
+</div>
 
 
 </body>
