--- a/abportfolio.html
+++ b/abportfolio.html
@@ -17,7 +17,7 @@
 
 <h3>LIDER GRUPO CONSTRUCTOR // INFINITUM</h3>
 
-<p>Image Rendering / Brand Identity / Sales Materials / etc</p>
+<p>Image Rendering / Brand Identity / Sales Materials / + </p>
 
 <div class="row">
     <div class="column">
@@ -46,30 +46,37 @@
 <br>
 <h3>LIDER GRUPO CONSTRUCTOR // NAMUA</h3>
 
-<p>Photoshoots / Brand Identity / Events / etc</p>
+<p>Photoshoots / Brand Identity / Events / PR / + </p>
 
 <div class="row">
     <div class="column">
         <img class="img4" src="namua1.png">
         <img class="img4" src="namua3.png">
+        <img class="img4" src="namua7.png">
+        
+
     </div>
 
     <div class="column">
         <img class="img5" src="namua2.png">
         <img class="img4" src="namua4.png">
-        <img class="img4" src="namua6.jpg">
+        <img class="img4" src="namua6.png">
+        <img class="img4" src="namua9.png">
+
 
     </div>
 
     <div class="column">
         <img class="img5" src="namua5.png">
+        <img class="img4" src="namua8.png">
+
     </div>
 </div>
 
 <br>
 <h3>MENORCA INVERSIONES // LA QUEBRADA</h3>
 
-<p>Photoshoots / Brand Identity / Events / etc</p>
+<p>Photoshoots / Brand Identity / Events / + </p>
 
 <div class="row">
     <div class="column">
@@ -78,13 +85,11 @@
 
     <div class="column">
         <img class="img4" src="laquebrada3.png">
-        <img class="img4" src="evento2.png">
     </div>
 
     <div class="column">
         <img class="img4" src="laquebrada2.png">
         <img class="img4" src="laquebrada4.png">
-        <img class="img4" src="evento1.png">
     </div>
 
 </div>
