--- a/CV_Abraham_Bazo.html
+++ b/CV_Abraham_Bazo.html
@@ -68,22 +68,22 @@
                 <h4>Inbound</h4>
                 <p>HubSpot Academy <br>
                 Issued May 2020 <br>
-                <a href="https://hubspot-academy.s3.amazonaws.com/prod/tracks/user-certificates/87645892585f427397eaa3b0f3409820-1588654519279.png" target="blank" style="text-decoration: none;"><span class="links">Go to Hubspot Certificaton</span></a>
+                <a href="https://hubspot-academy.s3.amazonaws.com/prod/tracks/user-certificates/87645892585f427397eaa3b0f3409820-1588654519279.png" target="_blank" style="text-decoration: none;"><span class="links">Go to Hubspot Certificaton</span></a>
                 </p>
                 <h4>Application of AI, InsurTech, and Real Estate Technology</h4>
                 <p>University of Pennsylvania via Coursera <br>
                 Issued Mar 2020 <br>
-                <a href="https://www.coursera.org/account/accomplishments/certificate/XXHD7GPD3WUT" target="blank" style="text-decoration: none;"><span class="links">Go to Wharton Certificaton</span></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/XXHD7GPD3WUT" target="_blank" style="text-decoration: none;"><span class="links">Go to Wharton Certificaton</span></a>
                 </p>
                 <h4>Design Thinking for Innovation</h4>
                 <p>University of Virginia via Coursera <br>
                 Issued Mar 2020 <br>
-                <a href="https://www.coursera.org/account/accomplishments/certificate/N9R8QSW3UHYB" target="blank" style="text-decoration: none;"><span class="links">Go to University of Virginia Certificaton</span></a>
+                <a href="https://www.coursera.org/account/accomplishments/certificate/N9R8QSW3UHYB" target="_blank" style="text-decoration: none;"><span class="links">Go to University of Virginia Certificaton</span></a>
                 </p>
                 <h4>Social Media Intensive</h4>
                 <p>New York University <br>
                 Issued August 2016 <br>
-                <a href="http://nyusps.basno.com/la4hd44b" target="blank" style="text-decoration: none;"><span class="links">Go to NYU Certificaton</span></a>
+                <a href="http://nyusps.basno.com/la4hd44b" target="_blank" style="text-decoration: none;"><span class="links">Go to NYU Certificaton</span></a>
                 </p>
         </article>
         <br>
@@ -106,7 +106,7 @@
         <article>
             <h3>Work Samples / Portfolio</h3>
                 <p>For marketing work samples 
-                <a href="abportfolio.html" target="blank" style="text-decoration: none;"><span class="links">go to Portfolio</span></a>
+                <a href="abportfolio.html" target="_blank" style="text-decoration: none;"><span class="links">go to Portfolio</span></a>
                 </p>
 
                 
