--- a/abportfolio.html
+++ b/abportfolio.html
@@ -52,22 +52,27 @@
     <div class="column">
         <img class="img4" src="namua1.png">
         <img class="img4" src="namua3.png">
+        <img class="img4" src="namua10.jpg">
+        <img class="img4" src="namua13.jpg">
         <img class="img4" src="namua7.png">
-        
 
     </div>
 
     <div class="column">
         <img class="img5" src="namua2.png">
         <img class="img4" src="namua4.png">
+        <img class="img4" src="namua11.jpg">
+        <img class="img4" src="namua16.jpg">
         <img class="img4" src="namua6.png">
         <img class="img4" src="namua9.png">
 
+       
 
     </div>
 
     <div class="column">
         <img class="img5" src="namua5.png">
+        <img class="img4" src="namua12.jpg">
         <img class="img4" src="namua8.png">
 
     </div>
