--- a/abportfolio.html
+++ b/abportfolio.html
@@ -17,19 +17,24 @@
 
 <h3>LIDER GRUPO CONSTRUCTOR // INFINITUM</h3>
 
-<p>Image Rendering / Brand Identity / Sales Materials / + </p>
+<p>
+    Marketing Strategy / Commercial Plan / Commercial Budget Management /  Sales Administration  / Brand Identity / Image Rendering / +
+</p>
 
 <div class="row">
     <div class="column">
-        <img class="img1" src="infinitumfachada.jpg">
-        <img class="img2" src="infinitumlobby.jpg">
-
+        <img class="image" src="infinitumfachada.jpg">
+        <img class="image" src="infinitumlobby.jpg">
+        <iframe width=100% src="https://www.youtube.com/embed/wBfj-SEo52M?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <div class="column">
         <img class="img4" src="infinitumpiscina.jpg">
         <img class="img5" src="infinitumpiso12.png">
         <img class="img5" src="infinitumsalaflat.png">
+        <img class="img5" src="infinitumplano.png">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wBfj-SEo52M?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         
     </div>
 
@@ -46,7 +51,9 @@
 <br>
 <h3>LIDER GRUPO CONSTRUCTOR // NAMUA</h3>
 
-<p>Photoshoots / Brand Identity / Events / PR / + </p>
+<p>
+    Marketing Strategy / Commercial Plan / Commercial Budget Management /  Sales Administration  / Brand Identity / Photoshoots / Events / PR / + 
+</p>
 
 <div class="row">
     <div class="column">
@@ -81,20 +88,28 @@
 <br>
 <h3>MENORCA INVERSIONES // LA QUEBRADA</h3>
 
-<p>Photoshoots / Brand Identity / Events / + </p>
+<p>
+    Marketing Strategy / Commercial Plan / Marketing Budget /  Sales Administration  / Campaign Production / Events / Co-Branding / + 
+</p>
 
 <div class="row">
     <div class="column">
         <img class="img4" src="laquebrada1.jpg">
+        <img class="img4" src="laquebrada6.jpg">
+
     </div>
 
     <div class="column">
         <img class="img4" src="laquebrada3.png">
+        <img class="img4" src="laquebrada5.jpg">
+    
+
     </div>
 
     <div class="column">
         <img class="img4" src="laquebrada2.png">
         <img class="img4" src="laquebrada4.png">
+        <img class="img4" src="laquebrada7.jpg">
     </div>
 
 </div>
